--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -59,8 +59,8 @@
     <nav
       class="navbar navbar-expand-lg bg-body-tertiary rounded fixed-top shadow-sm"
       aria-label="Eleventh navbar example"
-    >
-      <div class="container-fluid">
+      >
+          <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">
           <img
             src="{% static 'images/bootstrap-logo.svg' %}"
@@ -133,18 +133,14 @@
       </div>
     </nav>
 
-    <main class="flex-grow-1" style="margin-top: 56px;">
+    <main class="flex-grow-1 p-4" style="margin-top: 56px; /* Adjust for fixed navbar height */">
       {% comment %} Main content area {% endcomment %}
-      <div class="container my-4">
-        <div class="p-4 bg-light border-rounded-bottom rounded-3 shadow-sm border">
-          {% block content %}
-          {% endblock %}
-        </div>
+     {% block content %}
+     {% endblock %}
       </div >
     </main>
-    <div class="container">
-      <footer 
-      class="d-flex flex-wrap justify-content-between bg-body-tertiary rounded stick-bottom  align-items-center py-3 px-3 mt-4 mb-0 border-top ">
+    <footer 
+        class="d-flex flex-wrap justify-content-between bg-body-tertiary rounded stick-bottom  align-items-center py-3 px-3 mt mb-0 border-top ">
         <div class="col-md-4 d-flex align-items-center">
           <a
             href="#" 
@@ -170,13 +166,7 @@
               href="#"
               aria-label="Facebook"
             >
-              <img
-                src="{% static 'images/facebook.svg' %}"
-                alt="Facebook"
-                width="24"
-                height="24"
-                class="bi"
-              />
+              <i class="bi bi-facebook" style="font-size: 1rem; color: blue;"></i>
             </a>
           </li>
           <li class="ms-3">
@@ -184,31 +174,18 @@
               href="#"
               aria-label="Instagram"
             >
-              <img
-                src="{% static 'images/instagram.svg' %}"
-                alt="Instagram"
-                width="24"
-                height="24"
-                class="bi"
-              />
+              <i class="bi bi-instagram" style="font-size: 1rem; color: blue;" ></i>
             </a>
           </li>
           <li class="ms-3">
             <a class="text-body-secondary"
                 href="#"
                 aria-label="Twitter">
-              <img
-                src="{% static 'images/twitter.svg' %}"
-                alt="Twitter"
-                width="24"
-                height="24"
-                class="bi"
-              />
+              <i class="bi bi-twitter" style="font-size: 1rem; color: blue;"></i>
             </a>
           </li>
         </ul>
-      </footer>
-    </div>
+    </footer>
     {% comment %} Footer section with app info and social icons {% endcomment %}
     <!-- Bootstrap JS and dependencies -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
