--- a/sdp_project/templates/core/contact.html
+++ b/sdp_project/templates/core/contact.html
@@ -1,8 +1,27 @@
 {% extends "core/base.html" %}
 {% block title %}Contact{% endblock %}
 {% block content %}
-<div class="container">
   <h2>Contact Us</h2>
   <p>If you have any questions, email us at <a href="mailto:example@example.com">example@example.com</a>.</p>
+
+  <div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="container">
+      <div class="card profile-card w-100">
+        <div class="card-body text-center">
+            <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="User Profile" class="rounded-circle profile-img mb-3">
+            <h3 class="card-title mb-2">John Doe</h3>
+            <p class="card-text text-muted mb-3">Web Developer</p>
+            <div class="social-icons mb-4">
+                <a href="#" class="me-2">
+                  <i class="bi bi-instagram"></i>
+                </a>
+                <a href="#">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            </div>
+        </div>
+      </div>
+  </div>
+
 </div>
 {% endblock %}
