--- a/sdp_project/templates/core/about.html
+++ b/sdp_project/templates/core/about.html
@@ -1,7 +1,47 @@
 {% extends "core/base.html" %}
+{% load static %}
 {% block title %}About Us{% endblock %}
 {% block content %}
-
-  <h2>About the Developer</h2>
-  <p>Information about the developer or the project goes here.</p>
+  <div class="container">
+    <div class="container mb-4 " 
+    style="
+    background-image: url('{% static "images/urban-vintage-78A265wPiO4-unsplash.jpg" %}'); 
+    background-size: 
+    cover; 
+    background-position: center; 
+    padding: 20px; 
+    color: white; 
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    margin-top: 20px;"">
+      <h2>About Us</h2>
+    </div>
+    <div class="px-lg-4">
+        <p>
+          We are a team of dedicated professionals committed to providing the best sales solutions for your business.
+          Our goal is to help you streamline your sales processes and improve your overall efficiency.
+          Welcome to our Sales App! We are dedicated to providing the best solutions for managing your sales and inventory efficiently.
+      </p>
+    <h3>Our Team</h3>
+        <p>
+          Our team is composed of experienced professionals passionate about delivering high-quality software solutions tailored to your needs.
+          We believe in continuous improvement and are always looking for ways to enhance our products and services.
+          We are committed to providing exceptional customer service and support to ensure your success.
+        </p>
+    <h3>Our Mission</h3>
+        <p>
+          Our mission is to empower businesses with tools that simplify sales processes, improve productivity, and drive growth.</p>
+          We strive to create innovative solutions that meet the evolving needs of our customers.
+          We are dedicated to building long-lasting relationships with our clients and partners.
+          We are here to help you succeed in your sales endeavors.
+        </p>
+    <h3>Our Vision</h3> 
+        <p>
+          Our vision is to be a leading provider of sales solutions that transform the way businesses operate.
+          We aim to be at the forefront of technology and innovation in the sales industry.
+          We envision a future where our solutions are an integral part of every successful sales organization.
+        </p>
+    </div>
+  </div>
+  </div>
 {% endblock %}
